--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "peopleinside/flarum-ext-antiflood",
-    "description": "Flarum extension to prevent topic/post flooding, limit pending approvals, and fix emoji rendering in code blocks.",
+    "description": "Flarum extension to prevent topic/post flooding and limit pending approvals.",
     "type": "flarum-extension",
-    "keywords": ["flarum", "antiflood", "approval", "emoji", "code-blocks"],
+    "keywords": ["flarum", "antiflood", "approval"],
     "license": "MIT",
     "authors": [
         {
@@ -27,11 +27,6 @@
             "title": "AntiFlood",
             "icon": {
                 "name": "fas fa-shield-alt"
-            }
-        },
-        "flarum-cli": {
-            "modules": {
-                "forum": true
             }
         }
     },
